Nav bar no longer has margin, hopefully fix mobile phone banner image white gap
Nav bar no longer has margin, hopefully fix mobile phone banner image
white gap

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -10,7 +10,8 @@
     display: inline-block;
     width: 100%;
     vertical-align: top;
-    margin: 0 0 50px;
+    margin: 0 0 0px;
+    /*margin: 0 0 50px;*/
     padding: 4px 20px;
     background-color: $black;
 
